tag more ent content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,13 +91,17 @@ plugins:
         - 7.data-security/1.authentication/4.ldap.md
         - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - nebula-operator/10.backup-restore-using-operator.md
+        - nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
         - synchronization-and-migration/replication-between-clusters.md
         - 20.appendix/release-notes/nebula-ent-release-note.md
         - nebula-dashboard-ent/*
+        - nebula-explorer/*
         - backup-and-restore/nebula-br-ent/*
         - 6.monitor-and-metrics/3.bbox/*
         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
         - 3.ngql-guide/8.clauses-and-options/joins.md
+        - 20.appendix/release-notes/dashboard-ent-release-note.md
+        - 20.appendix/release-notes/explorer-release-note.md
         # ent.end
 
         # comm.begin
@@ -630,49 +634,52 @@ nav:
   #     - Monitoring metrics: nebula-dashboard-ent/7.monitor-parameter.md
   #     - FAQ: nebula-dashboard-ent/8.faq.md
   #ent
-  - Explorer:
-    - What is NebulaGraph Explorer: nebula-explorer/about-explorer/ex-ug-what-is-explorer.md
-    - Deploy and connect:
-      - Deploy Explorer: nebula-explorer/deploy-connect/ex-ug-deploy.md
-      - Connect to NebulaGraph: nebula-explorer/deploy-connect/ex-ug-connect.md
-    - Page overview: nebula-explorer/ex-ug-page-overview.md
-    - Database management:
-      - Schema drafting: nebula-explorer/db-management/draft.md
-      - Schema management: nebula-explorer/db-management/10.create-schema.md
-      - Data import: nebula-explorer/db-management/11.import-data.md
-      - Console: nebula-explorer/db-management/explorer-console.md
-      - nGQL template: nebula-explorer/db-management/ngql-template.md
-      - Database user management: nebula-explorer/db-management/dbuser_management.md
-    - Graph explorer:
-      - Choose graph space: nebula-explorer/graph-explorer/13.choose-graphspace.md
-      - Start querying: nebula-explorer/graph-explorer/ex-ug-query-exploration.md
-      - Vertex Filter: nebula-explorer/graph-explorer/node-filtering.md
-      - Graph exploration: nebula-explorer/graph-explorer/ex-ug-graph-exploration.md
-      - Graph computing: nebula-explorer/graph-explorer/graph-algorithm.md
-      - Property calculation: nebula-explorer/graph-explorer/property-calculation.md
-    - Visual query: nebula-explorer/12.query-visually.md
-    - Canvas: 
-      - Canvas overview: nebula-explorer/canvas-operations/canvas-overview.md
-      - Visualization modes: nebula-explorer/canvas-operations/visualization-mode.md
-      - Canvas snapshots: nebula-explorer/canvas-operations/canvas-snapshot.md
-    - Workflow:
-      - Workflow overview: nebula-explorer/workflow/workflows.md
-      - Resource preparations: nebula-explorer/workflow/1.prepare-resources.md
-      - Workflow example: nebula-explorer/workflow/2.create-workflow.md
-      - Workflow management: nebula-explorer/workflow/3.workflow-management.md
-      - Job management: nebula-explorer/workflow/4.jobs-management.md
-      - Workflow API:
-        - API overview: nebula-explorer/workflow/workflow-api/workflow-api-overview.md
-        - Add a new job: nebula-explorer/workflow/workflow-api/api-post-jobs.md
-        - Get a list of all jobs: nebula-explorer/workflow/workflow-api/api-get-jobs.md
-        - Get a list of jobs for a specified workflow: nebula-explorer/workflow/workflow-api/api-get-workflow-jobs.md
-        - Query details for a specified job: nebula-explorer/workflow/workflow-api/api-desc-job.md
-        - Cancel a running job: nebula-explorer/workflow/workflow-api/api-cancel-job.md
-        - Get the result data of a specified task: nebula-explorer/workflow/workflow-api/api-desc-task.md
-    - Inline frame: nebula-explorer/iframe.md
-    - System settings: nebula-explorer/system-settings.md
-    - Basic operations and shortcuts: nebula-explorer/ex-ug-shortcuts.md
-    - FAQ: nebula-explorer/faq.md
+
+  #ent
+  # - Explorer:
+  #   - What is NebulaGraph Explorer: nebula-explorer/about-explorer/ex-ug-what-is-explorer.md
+  #   - Deploy and connect:
+  #     - Deploy Explorer: nebula-explorer/deploy-connect/ex-ug-deploy.md
+  #     - Connect to NebulaGraph: nebula-explorer/deploy-connect/ex-ug-connect.md
+  #   - Page overview: nebula-explorer/ex-ug-page-overview.md
+  #   - Database management:
+  #     - Schema drafting: nebula-explorer/db-management/draft.md
+  #     - Schema management: nebula-explorer/db-management/10.create-schema.md
+  #     - Data import: nebula-explorer/db-management/11.import-data.md
+  #     - Console: nebula-explorer/db-management/explorer-console.md
+  #     - nGQL template: nebula-explorer/db-management/ngql-template.md
+  #     - Database user management: nebula-explorer/db-management/dbuser_management.md
+  #   - Graph explorer:
+  #     - Choose graph space: nebula-explorer/graph-explorer/13.choose-graphspace.md
+  #     - Start querying: nebula-explorer/graph-explorer/ex-ug-query-exploration.md
+  #     - Vertex Filter: nebula-explorer/graph-explorer/node-filtering.md
+  #     - Graph exploration: nebula-explorer/graph-explorer/ex-ug-graph-exploration.md
+  #     - Graph computing: nebula-explorer/graph-explorer/graph-algorithm.md
+  #     - Property calculation: nebula-explorer/graph-explorer/property-calculation.md
+  #   - Visual query: nebula-explorer/12.query-visually.md
+  #   - Canvas: 
+  #     - Canvas overview: nebula-explorer/canvas-operations/canvas-overview.md
+  #     - Visualization modes: nebula-explorer/canvas-operations/visualization-mode.md
+  #     - Canvas snapshots: nebula-explorer/canvas-operations/canvas-snapshot.md
+  #   - Workflow:
+  #     - Workflow overview: nebula-explorer/workflow/workflows.md
+  #     - Resource preparations: nebula-explorer/workflow/1.prepare-resources.md
+  #     - Workflow example: nebula-explorer/workflow/2.create-workflow.md
+  #     - Workflow management: nebula-explorer/workflow/3.workflow-management.md
+  #     - Job management: nebula-explorer/workflow/4.jobs-management.md
+  #     - Workflow API:
+  #       - API overview: nebula-explorer/workflow/workflow-api/workflow-api-overview.md
+  #       - Add a new job: nebula-explorer/workflow/workflow-api/api-post-jobs.md
+  #       - Get a list of all jobs: nebula-explorer/workflow/workflow-api/api-get-jobs.md
+  #       - Get a list of jobs for a specified workflow: nebula-explorer/workflow/workflow-api/api-get-workflow-jobs.md
+  #       - Query details for a specified job: nebula-explorer/workflow/workflow-api/api-desc-job.md
+  #       - Cancel a running job: nebula-explorer/workflow/workflow-api/api-cancel-job.md
+  #       - Get the result data of a specified task: nebula-explorer/workflow/workflow-api/api-desc-task.md
+  #   - Inline frame: nebula-explorer/iframe.md
+  #   - System settings: nebula-explorer/system-settings.md
+  #   - Basic operations and shortcuts: nebula-explorer/ex-ug-shortcuts.md
+  #   - FAQ: nebula-explorer/faq.md
+  #ent
 
   - Importer:
     - Use NebulaGraph Importer: nebula-importer/use-importer.md
@@ -730,8 +737,8 @@ nav:
 
     - Algorithm overview: graph-computing/algorithm-description.md
     - NebulaGraph Algorithm: graph-computing/nebula-algorithm.md
-    - NebulaGraph Analytics: graph-computing/nebula-analytics.md
-    - NebulaGraph Explorer workflow: graph-computing/use-explorer.md
+#ent    - NebulaGraph Analytics: graph-computing/nebula-analytics.md
+#ent    - NebulaGraph Explorer workflow: graph-computing/use-explorer.md
 
   - Spark Connector: nebula-spark-connector.md
 
@@ -746,8 +753,8 @@ nav:
 #ent        - NebulaGraph Enterprise: 20.appendix/release-notes/nebula-ent-release-note.md
         - NebulaGraph Studio: 20.appendix/release-notes/studio-release-note.md
         - NebulaGraph Dashboard Community: 20.appendix/release-notes/dashboard-comm-release-note.md
-        - NebulaGraph Dashboard Enterprise: 20.appendix/release-notes/dashboard-ent-release-note.md
-        - NebulaGraph Explorer: 20.appendix/release-notes/explorer-release-note.md
+#ent        - NebulaGraph Dashboard Enterprise: 20.appendix/release-notes/dashboard-ent-release-note.md
+#ent        - NebulaGraph Explorer: 20.appendix/release-notes/explorer-release-note.md
       - Learning path: 20.appendix/learning-path.md
       - Ecosystem tools: 20.appendix/6.eco-tool-version.md
       - Port guide for company products: 20.appendix/port-guide.md
