--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,8 @@ plugins:
         - 20.appendix/release-notes/nebula-ent-release-note.md
         - nebula-dashboard-ent/*
         - nebula-explorer/*
+        - graph-computing/nebula-analytics.md
+        - graph-computing/use-explorer.md
         - backup-and-restore/nebula-br-ent/*
         - 6.monitor-and-metrics/3.bbox/*
         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
