--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0/docs-2.0/'
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.1/docs-2.0/'
 
 theme:
     name: material
@@ -109,8 +109,8 @@ plugins:
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
-      cover_subtitle: v3.5.0
-      author: Min Wu, Yao Zhou, Cooper Liang, Abby Huang
+      cover_subtitle: v3.5.1
+      author: Cooper Liang, Abby Huang
       cover: true
       back_cover: true
       cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'
@@ -150,13 +150,13 @@ extra:
     - icon: 'fontawesome/brands/github'
       link: 'https://github.com/vesoft-inc/nebula-docs'
   nebula:
-    release: 3.5.0
+    release: 3.5.1
     nightly: nightly
     master: master
     base20: 2.0
     base200: 2.0.0
     branch: release-3.5
-    tag: v3.5.0
+    tag: v3.5.1
   studio:
     base111b: 1.1.1-beta
     base220: 2.2.1
