--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -523,7 +523,7 @@ nav:
 #ent        - Install BR: backup-and-restore/nebula-br-ent/2.install-tools.md
 #ent        - Back up data with BR: backup-and-restore/nebula-br-ent/3.backup-data.md
 #ent        - Restore data with BR: backup-and-restore/nebula-br-ent/4.restore-data.md
-#ent      - Manage snapshots: backup-and-restore/3.manage-snapshot.md
+      - Manage snapshots: backup-and-restore/3.manage-snapshot.md
 
   - Synchronize and migrate:
       - Load balance: synchronization-and-migration/2.balance-syntax.md
