--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.4.2/docs-2.0/'
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.4.3/docs-2.0/'
 
 theme:
     name: material
@@ -103,8 +103,8 @@ plugins:
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
-      cover_subtitle: v3.4.2
-      author: Min Wu, Yao Zhou, Cooper Liang, Foesa Yang, Abby Huang
+      cover_subtitle: v3.4.3
+      author: Chris Chen, Cooper Liang, Abby Huang
       cover: true
       back_cover: true
       cover_logo: 'https://cloud-cdn.nebula-graph.com.cn/nebula-for-pdf.png'
@@ -149,13 +149,13 @@ extra:
     - icon: 'fontawesome/brands/github'
       link: 'https://github.com/vesoft-inc/nebula-docs'
   nebula:
-    release: 3.4.2
+    release: 3.4.3
     nightly: nightly
     master: master
     base20: 2.0
     base200: 2.0.0
     branch: release-3.4
-    tag: v3.4.2
+    tag: v3.4.3
   studio:
     base111b: 1.1.1-beta
     base220: 2.2.1
