--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,6 @@ plugins:
         - nebula-flink/*
         - CHANGELOG.md
         - spark-connector/*
-        - 4.deployment-and-installation/5.zone.md
         - 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-200-to-latest.md
         - nebula-cloud/*
         - nebula-cloud.md
@@ -85,18 +84,26 @@ plugins:
         - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
         # When publishing a version of a document that includes Enterprise Edition, annotation the following page
         # ent.begin
-        # - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
-        # - 4.deployment-and-installation/deploy-license.md
-        # - 5.configurations-and-logs/2.log-management/audit-log.md
-        # - 7.data-security/1.authentication/4.ldap.md
-        # - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
-        # - nebula-operator/10.backup-restore-using-operator.md
-        # - synchronization-and-migration/replication-between-clusters.md
-        # - 20.appendix/release-notes/nebula-ent-release-note.md
-        # - nebula-dashboard-ent/4.cluster-operator/operator/scale.md
-        # - backup-and-restore/nebula-br-ent/*
-        # - 6.monitor-and-metrics/3.bbox/*
-        # - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        - 3.ngql-guide/6.functions-and-expressions/17.ES-function.md
+        - 9.about-license/*
+        - 5.configurations-and-logs/2.log-management/audit-log.md
+        - 7.data-security/1.authentication/4.ldap.md
+        - nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
+        - nebula-operator/10.backup-restore-using-operator.md
+        - nebula-operator/3.deploy-nebula-graph-cluster/3.0.deploy-lm.md
+        - synchronization-and-migration/replication-between-clusters.md
+        - 20.appendix/release-notes/nebula-ent-release-note.md
+        - nebula-dashboard-ent/*
+        - nebula-explorer/*
+        - graph-computing/nebula-analytics.md
+        - graph-computing/use-explorer.md
+        - backup-and-restore/nebula-br-ent/*
+        - 6.monitor-and-metrics/3.bbox/*
+        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        - 3.ngql-guide/8.clauses-and-options/joins.md
+        - 20.appendix/release-notes/dashboard-ent-release-note.md
+        - 20.appendix/release-notes/explorer-release-note.md
+        - 4.deployment-and-installation/5.zone.md
         # ent.end
 
         # comm.begin
@@ -471,7 +478,7 @@ nav:
       - Manage Service: 4.deployment-and-installation/manage-service.md
       - Connect to Service: 4.deployment-and-installation/connect-to-nebula-graph.md
       - Manage Storage host: 4.deployment-and-installation/manage-storage-host.md
-#      - Manage zone: 4.deployment-and-installation/5.zone.md
+#ent      - Manage zone: 4.deployment-and-installation/5.zone.md
       - Upgrade:
           - Upgrade NebulaGraph Community to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-graph-to-latest.md
 #          - Upgrade NebulaGraph from v3.x to v3.4 (Community Edition): 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-300-to-latest.md
