--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,6 @@ plugins:
         - nebula-flink/*
         - CHANGELOG.md
         - spark-connector/*
-        - 4.deployment-and-installation/5.zone.md
         - 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-200-to-latest.md
         - nebula-cloud/*
         - nebula-cloud.md
@@ -104,6 +103,7 @@ plugins:
         - 3.ngql-guide/8.clauses-and-options/joins.md
         - 20.appendix/release-notes/dashboard-ent-release-note.md
         - 20.appendix/release-notes/explorer-release-note.md
+        - 4.deployment-and-installation/5.zone.md
         # ent.end
 
         # comm.begin
@@ -479,7 +479,7 @@ nav:
       - Manage Service: 4.deployment-and-installation/manage-service.md
       - Connect to Service: 4.deployment-and-installation/connect-to-nebula-graph.md
       - Manage Storage host: 4.deployment-and-installation/manage-storage-host.md
-#      - Manage zone: 4.deployment-and-installation/5.zone.md
+#ent      - Manage zone: 4.deployment-and-installation/5.zone.md
       - Upgrade:
           - Upgrade NebulaGraph Community to the latest version: 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-graph-to-latest.md
 #          - Upgrade NebulaGraph from v3.x to v3.4 (Community Edition): 4.deployment-and-installation/3.upgrade-nebula-graph/upgrade-nebula-from-300-to-latest.md
