--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -577,11 +577,11 @@ nav:
       - Import data: nebula-studio/quick-start/st-ug-import-data.md
       - Use Console:  nebula-studio/quick-start/st-ug-console.md
       - Use Schema:
-        - Operate graph spaces: nebula-studio/manage-schema/st-ug-crud-space.md
-        - Operate Tags: nebula-studio/manage-schema/st-ug-crud-tag.md
-        - Operate Edge types: nebula-studio/manage-schema/st-ug-crud-edge-type.md
-        - Operate Indexes: nebula-studio/manage-schema/st-ug-crud-index.md
-        - View Schema: nebula-studio/manage-schema/st-ug-view-schema.md
+        - Manage graph spaces: nebula-studio/manage-schema/st-ug-crud-space.md
+        - Manage tags: nebula-studio/manage-schema/st-ug-crud-tag.md
+        - Manage edge types: nebula-studio/manage-schema/st-ug-crud-edge-type.md
+        - Manage indexes: nebula-studio/manage-schema/st-ug-crud-index.md
+        - View schema: nebula-studio/manage-schema/st-ug-view-schema.md
       - Schema drafting: nebula-studio/quick-start/draft.md  
     - Troubleshooting:
       - Database connection error: nebula-studio/troubleshooting/st-ug-config-server-errors.md
