--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,9 @@ markdown_extensions:
 
 # Plugins
 plugins:
+  # image lightbox plugin（https://github.com/blueswen/mkdocs-glightbox#usage）
+  - glightbox:  
+      zoomable: true
 #  - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
   - macros:
       include_dir: docs-2.0/reuse/
