updates nebula-consle & mtls & fix comments

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,6 +105,7 @@ plugins:
         - 20.appendix/release-notes/dashboard-ent-release-note.md
         - 20.appendix/release-notes/explorer-release-note.md
         - 4.deployment-and-installation/5.zone.md
+        - nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
         # ent.end
 
         # comm.begin
@@ -251,9 +252,9 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.5.0
-    tag: v1.5.0
-    branch: release-1.5
+    release: 1.6.0
+    tag: v1.6.0
+    branch: release-1.6
     upgrade_from: 3.5.0
     upgrade_to: 3.5.x
   exporter:
@@ -734,6 +735,7 @@ nav:
 #ent
         - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
+#ent
         - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
         - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
