--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -736,7 +736,7 @@ nav:
         - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
 #ent
-        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+#ent        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
 #ent
