[wip] [sc]updates for operator (#2255)
* [wip] [sc]add zones for operator

* add zone principle

* helm parameters

* update mtls in operator

* updates nebula-consle & mtls & fix comments

* add `autoMountServerCerts`

* add notes

* Update 1.introduction-to-nebula-operator.md

* Update 8.5.enable-ssl.md

* 3.6.0-ent-zone-for-core

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
+  - pymdownx.details
 
 # Plugins
 plugins:
@@ -108,6 +109,7 @@ plugins:
         - 20.appendix/release-notes/dashboard-ent-release-note.md
         - 20.appendix/release-notes/explorer-release-note.md
         - 4.deployment-and-installation/5.zone.md
+        - nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
         # ent.end
 
         # comm.begin
@@ -254,9 +256,9 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.5.0
-    tag: v1.5.0
-    branch: release-1.5
+    release: 1.6.0
+    tag: v1.6.0
+    branch: release-1.6
     upgrade_from: 3.5.0
     upgrade_to: 3.6.0
   exporter:
@@ -733,10 +735,12 @@ nav:
         - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
 #ent        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-#ent        - Enable mTLS in NebulaGraph: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+#ent
+#ent        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-#ent      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
+#ent
+      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
 
