update ssl & adds-on

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -252,8 +252,8 @@ extra:
     branch: release-1.2
     tag: v1.2.0
   operator:
-    release: 1.6.0
-    tag: v1.6.0
+    release: 1.6.1
+    tag: v1.6.1
     branch: release-1.6
     upgrade_from: 3.5.0
     upgrade_to: 3.5.x
@@ -736,7 +736,8 @@ nav:
         - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
 #ent
-#ent        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
+#ent
+        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
 #ent
