--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,8 @@ markdown_extensions:
 
 # Plugins
 plugins:
+  - glightbox:  
+      zoomable: true
   - search # This is the original mkdocs search plugin. To use algolia search, comment out this plugin.
   - macros:
       include_dir: docs-2.0/reuse/
