--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -735,12 +735,12 @@ nav:
         - Reclaim PVs: nebula-operator/8.custom-cluster-configurations/8.2.pv-reclaim.md 
 #ent        - Balance storage data after scaling out: nebula-operator/8.custom-cluster-configurations/8.3.balance-data-when-scaling-storage.md
         - Manage cluster logs: nebula-operator/8.custom-cluster-configurations/8.4.manage-running-logs.md
-#ent
+
 #ent        - Enable mTLS: nebula-operator/8.custom-cluster-configurations/8.5.enable-ssl.md
       - Upgrade NebulaGraph clusters: nebula-operator/9.upgrade-nebula-cluster.md
       - Specify a rolling update strategy: nebula-operator/11.rolling-update-strategy.md
-#ent
-      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
+
+#ent      - Backup and restore: nebula-operator/10.backup-restore-using-operator.md
       - Self-healing: nebula-operator/5.operator-failover.md
       - FAQ: nebula-operator/7.operator-faq.md
 
