--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ repo_url: 'https://github.com/vesoft-inc/nebula'
 copyright: Copyright &copy; 2023 NebulaGraph
 
 # modify
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0-sc/docs-2.0/'
+# edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.5.0-sc/docs-2.0/'
 
 theme:
     name: material
