dashboard database user

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -616,7 +616,6 @@ nav:
   #         - Scale: nebula-dashboard-ent/4.cluster-operator/operator/scale.md
   #         - Service: nebula-dashboard-ent/4.cluster-operator/operator/service.md
   #         - Config Management: nebula-dashboard-ent/4.cluster-operator/operator/config-management.md
-  #         - Member management: nebula-dashboard-ent/4.cluster-operator/operator/member-management.md
   #         - Version upgrade: nebula-dashboard-ent/4.cluster-operator/operator/version-upgrade.md
   #         - Backup and restore: nebula-dashboard-ent/4.cluster-operator/operator/backup-and-restore.md
   #       - Analysis:
@@ -628,10 +627,11 @@ nav:
   #         - Audit log: nebula-dashboard-ent/4.cluster-operator/cluster-information/audit-log.md
   #         - Runtime log: nebula-dashboard-ent/4.cluster-operator/cluster-information/runtime-log.md
   #       - Notification: nebula-dashboard-ent/4.cluster-operator/9.notification.md
+  #       - Database user: nebula-dashboard-ent/4.cluster-operator/10.database-user.md
   #       - Data Synchronization: nebula-dashboard-ent/4.cluster-operator/7.data-synchronization.md
   #       - Operation records: nebula-dashboard-ent/4.cluster-operator/5.operation-record.md
   #       - Other settings: nebula-dashboard-ent/4.cluster-operator/6.settings.md
-  #     - Authority management: nebula-dashboard-ent/5.account-management.md
+  #     - Platform member management: nebula-dashboard-ent/5.account-management.md
   #     - Task center: nebula-dashboard-ent/10.tasks.md
   #     - NebulaGraph Dashboard Enterprise Edition LM: nebula-dashboard-ent/11.license-manager.md
   #     - System settings:
