--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           # mike delete 3.5.0 -p
           git fetch origin gh-pages --depth=1 # fix mike's CI update
           mike deploy 3.5.0-sc -p --rebase
-          mike list
+#          mike list
           
           # not public this branch; but push to web service
       # - name: Deploy
