--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,15 +36,15 @@ jobs:
           git branch
           git checkout .
           git checkout gh-pages
-      - name: Modify version.json
+      - name: Modify versions.json
         run: | 
           import yaml, json
           new_content = {"version": "3.5.0-sc", "title": "3.5.0-sc", "aliases": []}
-          with open('version.json', 'r') as f:
+          with open('versions.json', 'r') as f:
             data = json.load(f)
           if new_content in data:
             data.remove(new_content
-          with open('version.json', 'w') as f:
+          with open('versions.json', 'w') as f:
             json.dump(data, f)
         shell: python
           
