--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: '3.8'
           architecture: 'x64'
 
-      - name : prepare
+      - name: prepare
         run: sh ./prepare.sh 
 
       - name: Git Config
@@ -40,12 +40,12 @@ jobs:
         run: | 
           import yaml, json
           new_content = {"version": "3.5.0-sc", "title": "3.5.0-sc", "aliases": []}
-          with open('versions.json', 'r') as f:
-            data = json.load(f)
+          with open('./versions.json', 'r') as f:
+              data = json.load(f)
           if new_content in data:
-            data.remove(new_content
-          with open('versions.json', 'w') as f:
-            json.dump(data, f)
+              data.remove(new_content
+          with open('./versions.json', 'w') as outfile:
+              json.dump(data, outfile, indent=2)
         shell: python
           
           # not public this branch; but push to web service
