--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           with open('./versions.json', 'r') as f:
               data = json.load(f)
           if new_content in data:
-              data.remove(new_content
+              data.remove(new_content)
           with open('./versions.json', 'w') as outfile:
               json.dump(data, outfile, indent=2)
         shell: python
