--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,8 @@ jobs:
           git checkout gh-pages
       - name: Modify versions.json
         run: | 
-          import yaml, json
+          python -c "
+          import json
           new_content = {'version': '3.5.0-sc', 'title': '3.5.0-sc', 'aliases': []}
           with open('./versions.json', 'r') as f:
               data = json.load(f)
@@ -48,6 +49,7 @@ jobs:
                   break
           with open('./versions.json', 'w') as outfile:
               json.dump(data, outfile, indent=2)
+          "
         shell: python
           
           # not public this branch; but push to web service
