Update Zh versions list

--- a/.github/workflows/deploy-zh.yml
+++ b/.github/workflows/deploy-zh.yml
@@ -62,7 +62,7 @@ jobs:
         run: |
           import yaml, json
           new_content = {"version": "${{ env.ACTIONTEST }}", "title": "${{ env.ACTIONTEST }}", "aliases": []}
-          filename = "/tmp/enterprise_versions.json"   
+          filename = "/tmp/community_versions.json"   
           with open(filename, 'r') as infile:
               json_data = json.load(infile)
           found = False
