--- a/.github/workflows/deploy-zh.yml
+++ b/.github/workflows/deploy-zh.yml
@@ -83,7 +83,7 @@ jobs:
           password: ${{ secrets.ZHSITE_PASSWORD }}
           port: 404
           source: nebula-docs.tar.gz
-          target: /var/web/
+          target: /usr/web/
 
       - name: UnCompress
         uses: appleboy/ssh-action@master
