--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,12 @@ plugins:
         # - nebula-cloud/*
         - nebula-cloud.md
         - nebula-cloud/nebula-cloud-on-azure/*
+        - 3.ngql-guide/6.functions-and-expressions/9.user-defined-functions.md
+        - nebula-cloud/1.what-is-cloud.md
+        - nebula-cloud/nebula-cloud-on-alibabacloud/1.create-service-instance.md
+        - nebula-cloud/nebula-cloud-on-alibabacloud/2.use-cloud-services.md
+        - nebula-cloud/nebula-cloud-on-alibabacloud/3.delete-service-instance.md
+        - nebula-cloud/nebula-cloud-on-alibabacloud/4.scaling-services.md
 
   - with-pdf:
       copyright: 2023 Vesoft Inc.
@@ -735,6 +741,7 @@ nav:
           - YIELD: 3.ngql-guide/8.clauses-and-options/yield.md
           - WITH: 3.ngql-guide/8.clauses-and-options/with.md
           - UNWIND: 3.ngql-guide/8.clauses-and-options/unwind.md
+          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md
 
       - 图空间语句:
           - CREATE SPACE: 3.ngql-guide/9.space-statements/1.create-space.md
@@ -932,34 +939,6 @@ nav:
       - Dashboard 页面介绍: nebula-dashboard/4.use-dashboard.md
       - 监控指标说明: nebula-dashboard/6.monitor-parameter.md
 
-  - NebulaGraph Importer: nebula-importer/use-importer.md
-
-  - NebulaGraph Exchange:
-    - 认识 NebulaGraph Exchange:
-      - 什么是 NebulaGraph Exchange: nebula-exchange/about-exchange/ex-ug-what-is-exchange.md
-      - 使用限制: nebula-exchange/about-exchange/ex-ug-limitations.md
-    - 获取 NebulaGraph Exchange: nebula-exchange/ex-ug-compile.md
-    - 参数说明:
-      - 导入命令参数: nebula-exchange/parameter-reference/ex-ug-para-import-command.md
-      - 配置参数: nebula-exchange/parameter-reference/ex-ug-parameter.md
-    - 使用 NebulaGraph Exchange:
-      - 导入 CSV 文件数据: nebula-exchange/use-exchange/ex-ug-import-from-csv.md
-      - 导入 JSON 文件数据: nebula-exchange/use-exchange/ex-ug-import-from-json.md
-      - 导入 ORC 文件数据: nebula-exchange/use-exchange/ex-ug-import-from-orc.md
-      - 导入 Parquet 文件数据: nebula-exchange/use-exchange/ex-ug-import-from-parquet.md
-      - 导入 HBase 数据: nebula-exchange/use-exchange/ex-ug-import-from-hbase.md
-      - 导入 MySQL/PostgreSQL 数据: nebula-exchange/use-exchange/ex-ug-import-from-mysql.md
-      - 导入 Oracle 数据: nebula-exchange/use-exchange/ex-ug-import-from-oracle.md
-      - 导入 ClickHouse 数据: nebula-exchange/use-exchange/ex-ug-import-from-clickhouse.md
-      - 导入 Neo4j 数据: nebula-exchange/use-exchange/ex-ug-import-from-neo4j.md
-      - 导入 Hive 数据: nebula-exchange/use-exchange/ex-ug-import-from-hive.md
-      - 导入 MaxCompute 数据: nebula-exchange/use-exchange/ex-ug-import-from-maxcompute.md
-      - 导入 Pulsar 数据: nebula-exchange/use-exchange/ex-ug-import-from-pulsar.md
-      - 导入 Kafka 数据: nebula-exchange/use-exchange/ex-ug-import-from-kafka.md
-      - 导入通用 JDBC 数据: nebula-exchange/use-exchange/ex-ug-import-from-jdbc.md
-      - 导入 SST 文件数据: nebula-exchange/use-exchange/ex-ug-import-from-sst.md
-    - Exchange 常见问题: nebula-exchange/ex-ug-FAQ.md
-
   - NebulaGraph Operator:
       - 什么是 NebulaGraph Operator: nebula-operator/1.introduction-to-nebula-operator.md
       - 使用流程: nebula-operator/6.get-started-with-operator.md
@@ -979,11 +958,7 @@ nav:
 
   - 图计算:
 #    - 算法简介: graph-computing/algorithm-description.md
-    - NebulaGraph Algorithm: graph-computing/nebula-algorithm.md
-  
-  - NebulaGraph Spark Connector: nebula-spark-connector.md
-      
-  - NebulaGraph Flink Connector: nebula-flink-connector.md
+    - NebulaGraph Algorithm: graph-computing/nebula-algorithm.md  
 
   - NebulaGraph Bench: nebula-bench.md
 
@@ -996,7 +971,6 @@ nav:
         - NebulaGraph Dashboard 社区版: 20.appendix/release-notes/dashboard-comm-release-note.md
       - 学习路径: 20.appendix/learning-path.md
       - 生态工具概览: 20.appendix/6.eco-tool-version.md
-      - 导入工具选择: 20.appendix/write-tools.md
       - 产品端口全集: 20.appendix/port-guide.md
       - 社区参与: 15.contribution/how-to-contribute.md
       - 年表: 20.appendix/history.md
